chore: improve test coverage